k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lognex
  labels:
    app: lognex
    env: production
