k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lognex-ingress
  namespace: lognex
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: lognex.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lognex-backend-service
                port:
                  number: 8085
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: lognex-backend-service
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lognex-frontend-service
                port:
                  number: 80
